src/objects/Model__c.object
<CustomObject>
    <description>Model management framework and model inventory</description>
    <fields>
        <fullName>Assumptions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the assumptions used for the model are relevant and reasonable.</inlineHelpText>
        <label>Assumptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the calculations in the model have been independently checked and validated.</inlineHelpText>
        <label>Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if a procedure governing how model changes are to be performed is in place. They can be attached in the Notes &amp; Attachment section below.This includes the approval process for the design, execution and testing of the change.</inlineHelpText>
        <label>Change Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_of_Assumption_Validation__c</fullName>
        <label>Assumption Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Calculation_Validation__c</fullName>
        <label>Calculation Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Change_Management__c</fullName>
        <label>Change Management Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Data_Validation__c</fullName>
        <label>Data Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Methodology_Validation__c</fullName>
        <label>Methodology Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Architecture_Validation__c</fullName>
        <label>Model Architecture Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Integrity_Validation__c</fullName>
        <label>Model Integrity Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Management_Incentives__c</fullName>
        <label>Model Management Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Modification_Validation__c</fullName>
        <label>Model Modification Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Overrides__c</fullName>
        <label>Model Overrides Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Performance_Incentives__c</fullName>
        <label>Model Performance Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Procedure__c</fullName>
        <label>Procedure Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Results_Validation__c</fullName>
        <label>Results Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Model_Validation_Incentives__c</fullName>
        <label>Model Validation Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Monitoring_Procedures__c</fullName>
        <label>Monitoring Procedures Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Security_Confidentiality__c</fullName>
        <label>Security &amp; Confidentiality Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_of_Validation_Triggers__c</fullName>
        <inlineHelpText>Please describe the triggers of event-based model validation.</inlineHelpText>
        <label>Validation Triggers Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the data used for the model is relevant and reasonable.</inlineHelpText>
        <label>Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Review__c</fullName>
        <inlineHelpText>Please indicate the date of the last independent review.</inlineHelpText>
        <label>Date of Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Validation__c</fullName>
        <inlineHelpText>Please choose the data of the last model validation.</inlineHelpText>
        <label>Date of Last Validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defined_Purpose_and_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the model has a clearly defined purpose and scope.</inlineHelpText>
        <label>Defined Purpose and Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <inlineHelpText>The executive sponsor is a member of the management team that supports model oversight and can describe model limitations to the senior leadership team.</inlineHelpText>
        <label>Executive Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Model_Validation__c</fullName>
        <inlineHelpText>Please choose the frequency of the regular model validation process.</inlineHelpText>
        <label>Frequency of Model Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Governance_Assessment_Reporting__c</fullName>
        <formula>IF( 
AND( 
Governance_Score_2__c &gt;= 8, 
Governance_Grade__c == &quot;A&quot; 
), 
&quot;Mature&quot;, 
IF( 
AND( 
Governance_Score_2__c &gt;= 5.5, 
OR( 
Governance_Grade__c == &quot;A&quot;, 
Governance_Grade__c == &quot;B&quot; 
) 
), 
&quot;Intermediate&quot;, 
&quot;Initial&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Governance Assessment - Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Grade__c</fullName>
        <formula>IF(AND(
NOT(ISBLANK(Model_Owner__c)),
IF(Defined_Purpose_and_Scope__c, True, False),
IF(Model_User_Training__c, True, False),
IF(Security_confidentiality__c, True, False)
),&quot;A&quot;,
IF(AND(
NOT(ISBLANK(Model_Owner__c)),
IF(Defined_Purpose_and_Scope__c, True, False)),&quot;B&quot;,&quot;C&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Governance Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Score_2__c</fullName>
        <formula>(Governance_Score__c / 30) * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of POINTS (Governance)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Score__c</fullName>
        <formula>IF(NOT(ISBLANK(Model_Owner__c)),7.2,0)+
IF(Defined_Purpose_and_Scope__c,7.2,0)+
IF(Model_User_Training__c,4.8,0)+
IF(Security_confidentiality__c,4.8,0)+
IF(NOT(ISBLANK(Executive_Sponsor__c)),3.6,0)+
IF(Model_Management_Tied_to_Performance__c,2.4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Governance Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Section_Level__c</fullName>
        <formula>IMAGE(
IF(
	AND(
		Governance_Score_2__c &gt;= 8,
		Governance_Grade__c == &quot;A&quot;
	),
	&quot;/servlet/servlet.FileDownload?file=015M0000000C3yf&quot;,
	IF(
		AND(
			Governance_Score_2__c &gt;= 5.5,
			OR(
				Governance_Grade__c == &quot;A&quot;,
				Governance_Grade__c == &quot;B&quot;
			)
		),
	&quot;/servlet/servlet.FileDownload?file=015M0000000C3yz&quot;,
	&quot;/servlet/servlet.FileDownload?file=015M0000000C3yu&quot;
	)
),&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This assesses the model governance efforts based on the model mgmt. components in place. Initial-the starting point with little to no model mgmt. or have missing critical components; Intermediate-formal model mgmt. in place; Mature-strong model mgmt.</inlineHelpText>
        <label>Governance Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if records of past incidents are kept for when the model did not perform as expected.</inlineHelpText>
        <label>Incident Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Independent_Model_Review__c</fullName>
        <inlineHelpText>Please indicate whether the model has been reviewed by independent third parties.</inlineHelpText>
        <label>Independent Model Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limitation_of_Model__c</fullName>
        <inlineHelpText>Please specify the known limitations of the model. This could help model users to mitigate the risk of model results leading to incorrect decisions.</inlineHelpText>
        <label>Limitation of Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the concepts and methodologies used for the model are supported by best practices or research.</inlineHelpText>
        <label>Methodology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Architecture__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the model architecture has been independently tested against the intended design.</inlineHelpText>
        <label>Model Architecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the model&apos;s purpose, owners, validation results, and other important components are well documented.</inlineHelpText>
        <label>Model Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Integrity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if all relevant segments, statements, and metrics are reflected in the model.</inlineHelpText>
        <label>Model Integrity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Management_Tied_to_Performance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the effective model management is a component of relevant performance reviews.</inlineHelpText>
        <label>Model Management Tied to Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Modification_Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the model modification requires a testing and sign off procedure.</inlineHelpText>
        <label>Model Modification Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Owner_Email__c</fullName>
        <label>Model Owner Email</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Owner__c</fullName>
        <inlineHelpText>The model owner is the day-to-day owner of the model and person most relied upon for active model management.</inlineHelpText>
        <label>Model Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Path__c</fullName>
        <inlineHelpText>Please fill in the model path.</inlineHelpText>
        <label>Model Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Performance_Tied_to_Incentives__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if relevant performance reviews as is used for the model management tied to incentives.</inlineHelpText>
        <label>Model Performance Tied to Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if a model procedure is in place. They can be attached in the Notes &amp; Attachment section below, including timing and action steps for model runs or updates, reporting of completion, and procedures for independent assurance.</inlineHelpText>
        <label>Model Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Results_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if there is a formal process to ensure appropriate communication of results to management.</inlineHelpText>
        <label>Model Results Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the model results have been checked against control totals.</inlineHelpText>
        <label>Model Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Reviewer__c</fullName>
        <inlineHelpText>Please fill in the reviewer of the model validation process.</inlineHelpText>
        <label>Model Reviewer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Status__c</fullName>
        <label>Model Status</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_User_Qualifications__c</fullName>
        <inlineHelpText>Model user qualifications identifies the appropriate technical, academic, or experiential skill sets required before permissible model use.</inlineHelpText>
        <label>Model User Qualifications</label>
        <length>62768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Model_User_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if ongoing training programs are required before permissible model use.</inlineHelpText>
        <label>Model User Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Validation_Tied_to_Incentives__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if relevant model validation as is used for the model management tied to incentives.</inlineHelpText>
        <label>Model Validation Tied to Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Validation_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if there are event based (major changes, financial results, etc.) model validation triggers.</inlineHelpText>
        <label>Model Validation Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if a procedure for model monitoring is in place. It can be attached in the Notes&amp;Attachment section. It identifies how a model should be monitored, factors that would influence model performance, &amp; necessary enhancements to the model.</inlineHelpText>
        <label>Monitoring Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Model_Use__c</fullName>
        <inlineHelpText>Please select the other uses of the model.</inlineHelpText>
        <label>Other Model Use</label>
        <picklist>
            <picklistValues>
                <fullName>Capital Adequacy Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Expenditures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning &amp; Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting/Trend Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Fillings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valuation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Overall_Model_Mgmt_Assessment_Img__c</fullName>
        <formula>IMAGE(CASE( TEXT(Total_Section_Level__c) , 
&apos;Mature&apos;,&quot;/servlet/servlet.FileDownload?file=015M0000000C3yf&quot;, 
&apos;Intermediate&apos;,&quot;/servlet/servlet.FileDownload?file=015M0000000C3yz&quot;, 
&apos;Initial&apos;,&quot;/servlet/servlet.FileDownload?file=015M0000000C3yu&quot;,&quot;/s.gif&quot;
), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This provides a high-level assessment of the model mgmt. process that governs this model. Initial-the starting point with little to no model mgmt. or have missing critical components; Intermediate-formal model mgmt. in place; Mature-strong model mgmt.</inlineHelpText>
        <label>Overall Model Mgmt. Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overrides__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if a formal model overrides documentation is in place. It can be attached in the Notes &amp; Attachment section below. This document disclose the override with associated approver, purpose, date, and future considerations.</inlineHelpText>
        <label>Overrides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proc_Docs_Grade__c</fullName>
        <formula>IF(
	AND(
		NOT(ISBLANK(Limitation_of_Model__c)),
		IF(Change_Management__c, True, False),
		IF(Overrides__c, True, False),
		IF(Model_Documentation__c, True, False),
		IF(Model_Results_Communication__c, True, False)
	),&quot;A&quot;,
	IF(
		AND(
			NOT(ISBLANK(Limitation_of_Model__c)),
			IF(Model_Results_Communication__c, True, False)
		),&quot;B&quot;,&quot;C&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proc &amp; Docs Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proc_Docs_Score__c</fullName>
        <formula>IF(NOT(ISBLANK(Limitation_of_Model__c)),6,0)+
IF( AND(IF(Change_Management__c,True,False),IF(Overrides__c,True,False)) ,4,0)+
IF( Model_Documentation__c ,4,0)+
IF( Model_Results_Communication__c ,6,0)+
IF( Supporting_Materials__c ,2.5,0)+
IF( Incident_Records__c ,2.5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proc &amp; Docs Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proc_Docs_Section_Level__c</fullName>
        <formula>IMAGE(
	IF(
		AND(
			Procedures_Documentation_Score_2__c &gt;= 8,
			Proc_Docs_Grade__c == &quot;A&quot;
		),
		&quot;/servlet/servlet.FileDownload?file=015M0000000C3yf&quot;,
		IF(
			AND(
				Procedures_Documentation_Score_2__c &gt;= 5.5,
				OR(
					Proc_Docs_Grade__c == &quot;A&quot;,
					Proc_Docs_Grade__c == &quot;B&quot;
				)
			),
		&quot;/servlet/servlet.FileDownload?file=015M0000000C3yz&quot;,
		&quot;/servlet/servlet.FileDownload?file=015M0000000C3yu&quot;
		)
	),&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This assesses model documentation efforts based on the model mgmt. components in place. Initial-the starting point with little to no model mgmt. or have missing critical components; Intermediate-formal model mgmt. in place; Mature-strong model mgmt.</inlineHelpText>
        <label>Procedures &amp; Documentation Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedures_Documentation_Ass_Report__c</fullName>
        <formula>IF( 
AND( 
Procedures_Documentation_Score_2__c &gt;= 8, 
Proc_Docs_Grade__c == &quot;A&quot; 
), 
&quot;Mature&quot;, 
IF( 
AND( 
Procedures_Documentation_Score_2__c &gt;= 5.5, 
OR( 
Proc_Docs_Grade__c == &quot;A&quot;, 
Proc_Docs_Grade__c == &quot;B&quot; 
) 
), 
&quot;Intermediate&quot;, 
&quot;Initial&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedures &amp; Documentation Ass - Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedures_Documentation_Score_2__c</fullName>
        <formula>( Proc_Docs_Score__c / 25) * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of POINTS (Proc &amp; Docs)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Model__c</fullName>
        <inlineHelpText>Please specify the intended purpose of the model as that shapes how all of the model development was aligned.</inlineHelpText>
        <label>Purpose of Model</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Results__c</fullName>
        <inlineHelpText>Please specify the results of the last independent review.</inlineHelpText>
        <label>Review Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name__c</fullName>
        <inlineHelpText>Please specify the name of the independent review party.</inlineHelpText>
        <label>Reviewer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Qualifications_Trainings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if there are required qualifications &amp; training for reviewers of the model.</inlineHelpText>
        <label>Reviewer Qualifications &amp; Trainings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer_Qualifications__c</fullName>
        <inlineHelpText>Please specify the qualifications required for the independent model reviewer.</inlineHelpText>
        <label>Reviewer Qualifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_of_Model__c</fullName>
        <inlineHelpText>Please specify the intended scope of the model. This includes the business segments considered, elements to be forecast, specific uses of model results, etc.</inlineHelpText>
        <label>Scope of Model</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_confidentiality__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if a model security &amp; confidentiality procedure is in place. It can be attached in the Notes &amp; Attachment section.</inlineHelpText>
        <label>Security &amp; Confidentiality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Development__c</fullName>
        <label>Source of Development</label>
        <picklist>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supporting_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the supporting materials (best practices, research, etc.) are archived and available for review.</inlineHelpText>
        <label>Supporting Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Grade__c</fullName>
        <formula>IF(AND(
NOT(ISBLANK(Model_Owner__c)),
IF(Defined_Purpose_and_Scope__c, True, False),
IF(Model_User_Training__c, True, False),
IF(Security_confidentiality__c, True, False),

IF(Data__c, True, False),
IF(Assumptions__c, True, False),
IF(Methodology__c, True, False),
IF(Calculation__c, True, False),
IF(Model_Architecture__c, True, False),
IF(Model_Results__c, True, False),
IF(ISPICKVAL(Independent_Model_Review__c,&quot;Yes&quot;), True, False),

IF(Change_Management__c, True, False),
IF(Overrides__c, True, False),
IF(Model_Documentation__c, True, False),
IF(Model_Results_Communication__c, True, False)
),&quot;A&quot;,
IF(AND(
NOT(ISBLANK(Model_Owner__c)),
IF(Defined_Purpose_and_Scope__c, True, False),

IF(Data__c, True, False),
IF(Assumptions__c, True, False),
IF(Methodology__c, True, False),
IF(Calculation__c, True, False),

IF(Model_Results_Communication__c, True, False)
),&quot;B&quot;,&quot;C&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score_2__c</fullName>
        <description>Total_Score/Total_Possible*10</description>
        <formula>(Total_Score__c / 100) * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of POINTS (Total)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Governance_Score__c + Validation_Score__c + Proc_Docs_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Section_Level__c</fullName>
        <inlineHelpText>This provides a high-level assessment of the model mgmt. process that governs this model. Beginner-the starting point with little to no model mgmt. or have missing critical components; Intermediate-formal model mgmt. in place; Advanced-strong model mgmt.</inlineHelpText>
        <label>Overall Model Mgmt. Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Intermediate</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Mature</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_of_Model__c</fullName>
        <inlineHelpText>Please specify the primary use of the model.</inlineHelpText>
        <label>Primary Model Use</label>
        <picklist>
            <picklistValues>
                <fullName>Capital Adequacy Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Expenditures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning &amp; Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting/Trend Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Fillings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valuation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>